# SIMD-3D-graphics

./: .cursorignore  CMakeLists.txt  Makefile  README.md  setup-wsl.sh
include/graphics/: camera.h  mesh.h  renderer.h
include/math/: matrix4.h  vector3.h
src/: main.cpp
src/graphics/: camera.cpp  mesh.cpp  renderer.cpp
src/math/: matrix4.cpp  vector3.cpp
